@@ -734,14 +734,13 @@ enum parse_state {
 
 /*********************************************************************
  *
- *	Parse configuration file
+ * Parse configuration file
  *
  * Return 0 if reading failed, 1 otherwise
  */
 int
-parse_config(const char *cf, int exit_on_error)
+parse_config(const char *cf, LEX_ERROR_HANDLER *scan_error)
 {
-   set_exit_on_error(exit_on_error);
    LEX *lc = NULL;
    int token, i, pass;
    int res_type = 0;
@@ -755,9 +754,15 @@ parse_config(const char *cf, int exit_on_error)
    Dmsg0(900, "Enter parse_config()\n");
    for (pass=1; pass <= 2; pass++) {
       Dmsg1(900, "parse_config pass %d\n", pass);
-      if ((lc = lex_open_file(lc, cf, NULL)) == NULL) {
-	 set_exit_on_error(1); /* Never reached if exit_on_error == 1 */
-	 return 0;
+      if ((lc = lex_open_file(lc, cf, scan_error)) == NULL) {
+         lc = (LEX *)malloc(sizeof(LEX));
+         memset(lc, 0, sizeof(LEX));
+         lc->scan_error = scan_error;
+         berrno be;
+         scan_err2(lc, _("Cannot open config file %s: %s\n"),
+            lc->str, be.strerror());
+         free(lc);
+         return 0;
       }
       while ((token=lex_get_token(lc, T_ALL)) != T_EOF) {
          Dmsg1(900, "parse got token=%s\n", lex_tok_to_str(token));
@@ -768,7 +773,6 @@ parse_config(const char *cf, int exit_on_error)
 	    }
 	    if (token != T_IDENTIFIER) {
                scan_err1(lc, _("Expected a Resource name identifier, got: %s"), lc->str);
-	       set_exit_on_error(1); /* Never reached if exit_on_error == 1 */
 	       return 0;
 	    }
 	    for (i=0; resources[i].name; i++)
@@ -781,8 +785,7 @@ parse_config(const char *cf, int exit_on_error)
 	       }
 	    if (state == p_none) {
                scan_err1(lc, _("expected resource name, got: %s"), lc->str);
-	       set_exit_on_error(1); /* Never reached if exit_on_error == 1 */
-	       return 0;
+          return 0;
 	    }
 	    break;
 	 case p_resource:
@@ -793,7 +796,6 @@ parse_config(const char *cf, int exit_on_error)
 	    case T_IDENTIFIER:
 	       if (level != 1) {
                   scan_err1(lc, _("not in resource definition: %s"), lc->str);
-		  set_exit_on_error(1); /* Never reached if exit_on_error == 1 */
 		  return 0;
 	       }
 	       for (i=0; items[i].name; i++) {
@@ -805,7 +807,6 @@ parse_config(const char *cf, int exit_on_error)
                         Dmsg1 (900, "in T_IDENT got token=%s\n", lex_tok_to_str(token));
 			if (token != T_EQUALS) {
                            scan_err1(lc, _("expected an equals, got: %s"), lc->str);
-			   set_exit_on_error(1); /* Never reached if exit_on_error == 1 */
 			   return 0;
 			}
 		     }
@@ -821,7 +822,6 @@ parse_config(const char *cf, int exit_on_error)
                   Dmsg1(900, "Keyword = %s\n", lc->str);
                   scan_err1(lc, _("Keyword \"%s\" not permitted in this resource.\n"
                      "Perhaps you left the trailing brace off of the previous resource."), lc->str);
-		  set_exit_on_error(1); /* Never reached if exit_on_error == 1 */
 		  return 0;
 	       }
 	       break;
@@ -839,19 +839,16 @@ parse_config(const char *cf, int exit_on_error)
 	    default:
                scan_err2(lc, _("unexpected token %d %s in resource definition"),
 		  token, lex_tok_to_str(token));
-	       set_exit_on_error(1); /* Never reached if exit_on_error == 1 */
 	       return 0;
 	    }
 	    break;
 	 default:
             scan_err1(lc, _("Unknown parser state %d\n"), state);
-	    set_exit_on_error(1); /* Never reached if exit_on_error == 1 */
 	    return 0;
 	 }
       }
       if (state != p_none) {
          scan_err0(lc, _("End of conf file reached with unclosed resource."));
-	 set_exit_on_error(1); /* Never reached if exit_on_error == 1 */
 	 return 0;
       }
       if (debug_level >= 900 && pass == 2) {
@@ -863,7 +860,6 @@ parse_config(const char *cf, int exit_on_error)
       lc = lex_close_file(lc);
    }
    Dmsg0(900, "Leave parse_config()\n");
-   set_exit_on_error(1);
    return 1;
 }
 
